<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools" android:layout_width="match_parent"
    android:layout_height="match_parent" android:paddingLeft="@dimen/activity_horizontal_margin"
    android:paddingRight="@dimen/activity_horizontal_margin"
    android:paddingTop="@dimen/activity_vertical_margin"
    android:paddingBottom="@dimen/activity_vertical_margin"
    tools:context="com.gestorclientes.dm2.activityeintends.Ejer1.Ejercicio1_validar"
    android:background="@drawable/fondo"
    android:id="@+id/fondoValidacion">

    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:textAppearance="?android:attr/textAppearanceMedium"
        android:id="@+id/ejer1_tit_validar"
        android:layout_alignParentTop="true"
        android:layout_centerHorizontal="true" />

    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:textAppearance="?android:attr/textAppearanceMedium"
        android:text="@string/ejer1_str_aceptas"
        android:id="@+id/textView2"
        android:layout_below="@+id/ejer1_tit_validar"
        android:layout_centerHorizontal="true" />

    <Button
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/ejer1_b_aceptar"
        android:id="@+id/ejer1_b_aceptar"
        android:layout_below="@+id/textView2"
        android:layout_centerHorizontal="true" />

    <Button
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/ejer1_b_rechazar"
        android:id="@+id/ejer1_b_rechazar"
        android:layout_below="@+id/ejer1_b_aceptar"
        android:layout_centerHorizontal="true" />
</RelativeLayout>
